# p2p-screenshare

./: CMakeLists.txt  build.bat  imgui.ini  log.txt  server.go
src/: App.cpp  App.h  NewTrivial.cpp  NewTrivial.h  main.cpp  test_common.cpp  test_p2p.cpp  trivial_signaling_client.cpp  trivial_signaling_client.h
src copy/: App.cpp  App.h  test_p2p.cpp  trivial_signaling_client.cpp
src copy/Networking/: SignalServerClient.cpp  SignalServerClient.h  TrivialSignalingClient.h
src/Networking/: PeerConnections.h  SignalServerClient.cpp  SignalServerClient.h  TrivialSignalingClient.h  TrivialSignalingServer.cpp  TrivialSignalingServer.h
